--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -17,9 +17,9 @@ filter {
            ]
         }
 
-        mutate {
-            add_field => { "log_date_raw" => "%{log_year}/${log_month}/${log_day}:%{log_hour}:%{log_min}:${log_second}" }
-        }
+        // mutate {
+        //     add_field => { "log_date_raw" => "%{log_year}/${log_month}/${log_day}:%{log_hour}:%{log_min}:${log_second}" }
+        // }
 
     }
 
