--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -13,14 +13,9 @@ filter {
         grok {
            match => [
               "message",
-              "%{YEAR:log_year}/%{MONTHNUM:log_month}/%{MONTHDAY:log_day}%{SPACE}%{HOUR:log_hour}:%{MINUTE:log_min}:%{ISO8601_SECOND:log_second},\[%{PROG:log_addr_start}:%{PROG:log_addr_end}],\[%{LOGLEVEL:log_level}],\[%{CISCO_REASON:log_component}],%{SPACE}%{GREEDYDATA:log_data}"
+              "%{YEAR:log_year}\/%{MONTHNUM:log_month}\/%{MONTHDAY:log_day}%{SPACE}%{HOUR:log_hour}:%{MINUTE:log_min}:%{ISO8601_SECOND:log_second},\[%{PROG:log_addr_start}:%{PROG:log_addr_end}\],\[%{LOGLEVEL:log_level}\],\[%{CISCO_REASON:log_component}\],%{SPACE}%{GREEDYDATA:log_data}"
            ]
         }
-
-        // mutate {
-        //     add_field => { "log_date_raw" => "%{log_year}/${log_month}/${log_day}:%{log_hour}:%{log_min}:${log_second}" }
-        // }
-
     }
 
     if [type] == "vmware_esxi_log" {
