--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -5,12 +5,12 @@ filter {
         grok {
            match => [
               "message",
-              "%{TIMESTAMP_ISO8601:log_date}%{GREEDYDATA:log_message}"
+              "%{SYSLOG5424SD:log_date}%{GREEDYDATA:log_message}"
            ]
         }
         date {
-            # ex: 2017-06-02T20:30:18.783Z
-            match => ["log_date","ISO8601"]
+            # ex: [Thu Aug 16 22:50:23 2018]
+            match => ["log_date", "EEE MMM dd HH:mm:ss YYYY"]
             # timezone => "America/New_York"
             remove_field => ["log_date"]
         }
