--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -1,7 +1,7 @@
 
 filter {
 
-    if [type] == "everquest_log" {
+    if [fields][document_type] == "everquest_log" {
         grok {
            match => [
               "message",
