--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -5,8 +5,9 @@ filebeat.prospectors:
 - input_type: log
   paths:
     - G:\games\eq1\Logs\eqlog*.txt
+  fields:
+    document_type: 'everquest_log'
   close_eof: true
-  document_type: 'everquest_log'
 
 - input_type: log
   paths:
