--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -10,7 +10,7 @@ filter {
         }
         date {
             # ex: [Thu Aug 16 22:50:23 2018]
-            match => ["log_date", "EEE MMM dd HH:mm:ss YYYY"]
+            match => ["log_date", "[EEE MMM dd HH:mm:ss YYYY]"]
             # timezone => "America/New_York"
             remove_field => ["log_date"]
         }
