--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -8,6 +8,9 @@ filter {
               "%{SYSLOG5424SD:log_date}%{GREEDYDATA:log_message}"
            ]
         }
+        mutate {
+            gsub => [ "log_message", "^\s*", "" ]
+        }
         date {
             # ex: [Thu Aug 16 22:50:23 2018]
             match => ["log_date", "[EEE MMM dd HH:mm:ss YYYY]"]
