attempting to parse combat

--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -18,9 +18,37 @@ filter {
             remove_field => ["log_date"]
         }
 
-        # character
-        # facility
+    }
 
+    # combat
+    if "points of damage." in [log_message] {
+
+        mutate {
+            add_field => { "log_type" => "combat" }
+        }
+
+        if "non-melee damage." in [log_message] {
+            mutate {
+                add_field => { "damage_type" => "non-melee" }
+            }
+        } else {
+            mutate {
+                add_field => { "damage_type" => "melee" }
+            }
+        }
+
+        grok {
+            patterns_dir => ["./patterns"]
+            match => [
+                "log_message",
+                [
+                    # hit
+                    "%{GREEDYDATA:actor} %{EQ_MELEE_DMG_TYPE:damage_type} (?:a |an |)%{GREEDYDATA:target} for %{NUMBER:damage_amount} points of (?:non-melee |)damage.",
+
+                    # miss
+                    "%{GREEDYDATA:actor} (?:tries|try) to %{EQ_MELEE_DMG_TYPE:damage_action} (?:a |an |)%{GREEDYDATA:target}, but (?:a |an |)%{GREEDYDATA:target2} %{EQ_MISS_TYPE:counter_action}"
+                ]
+        }
     }
 
 }
