attempting to parse combat

--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -37,7 +37,7 @@ filter {
             }
 
             grok {
-                patterns_dir => ["./patterns"]
+                patterns_dir => ["./patterns/eq_patterns.txt"]
                 match => [
                     "log_message",
                     [
