attempting to parse combat

--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -42,12 +42,20 @@ filter {
                     "log_message",
                     [
                         # hit
-                        "%{GREEDYDATA:actor} %{EQ_MELEE_DMG_TYPE:damage_type} (?:a |an |)%{GREEDYDATA:target} for %{NUMBER:damage_amount} points of (?:non-melee |)damage.",
+                        "%{GREEDYDATA:actor} %{EQ_MELEE_ACTION:melee_action} (?:a |an |)%{GREEDYDATA:target} for %{NUMBER:damage_amount} points of (?:non-melee |)damage.",
 
                         # miss
-                        "%{GREEDYDATA:actor} (?:tries|try) to %{EQ_MELEE_DMG_TYPE:damage_action} (?:a |an |)%{GREEDYDATA:target}, but (?:a |an |)%{GREEDYDATA:target2} %{EQ_MISS_TYPE:counter_action}"
+                        "%{GREEDYDATA:actor} (?:tries|try) to %{EQ_MELEE_ACTION:melee_action} (?:a |an |)%{GREEDYDATA:target}, but (?:a |an |)%{GREEDYDATA:target2} %{EQ_COUNTER_ACTION:counter_action}"
                     ]
                 ]
+            }
+
+            mutate {
+                convert => { "damage_amount" => "integer" }
+            }
+
+            mutate {
+                remove_field => ["target2"]
             }
         }
 
