--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -24,16 +24,7 @@ filter {
 
             mutate {
                 add_field => { "log_type" => "combat" }
-            }
-
-            if "non-melee damage." in [log_message] {
-                mutate {
-                    add_field => { "damage_type" => "non-melee" }
-                }
-            } else {
-                mutate {
-                    add_field => { "damage_type" => "melee" }
-                }
+                add_field => { "damage_type" => "melee" }
             }
 
             grok {
@@ -57,8 +48,38 @@ filter {
             mutate {
                 remove_field => ["target2"]
             }
+        } else if "non-melee damage." in [log_message] {
+
+            mutate {
+                add_field => { "log_type" => "combat" }
+                add_field => { "damage_type" => "melee" }
+            }
+
+            grok {
+                patterns_dir => ["/usr/share/logstash/pipeline/patterns"]
+                match => [
+                    "log_message",
+                    [
+                        # hit
+                        "%{GREEDYDATA:actor} hit (?:a |an |)%{GREEDYDATA:target} for %{NUMBER:damage_amount} points of non-melee damage.",
+
+                        # hit 2
+                        "(?:a |an |)%{GREEDYDATA:target} has taken %{NUMBER:damage_amount} damage from %{WORD:actor} %{GREEDYDATA:spell}."
+
+                        # TODO: miss \ resist
+                    ]
+                ]
+            }
+
+            mutate {
+                convert => { "damage_amount" => "integer" }
+            }
+
         }
 
     }
 
 }
+
+# TODO: note miss
+# TODO: spell modifiers if possible (buffs, songs)
