attempting to parse combat

--- a/logstash/pipeline/filter_everquest.conf
+++ b/logstash/pipeline/filter_everquest.conf
@@ -52,7 +52,7 @@ filter {
 
             mutate {
                 add_field => { "log_type" => "combat" }
-                add_field => { "damage_type" => "melee" }
+                add_field => { "damage_type" => "non-melee" }
             }
 
             grok {
