attempting to parse csv

--- a/logstash/pipeline/filter_everquest_csv.conf
+++ b/logstash/pipeline/filter_everquest_csv.conf
@@ -7,12 +7,9 @@ filter {
         }
 
         date {
-            match => ["datestamp","ISO8601"]
+            match => ["datestamp","ISO8601"],
             remove_field => ["datestamp"]
         }
     }
 
 }
-
-# TODO: note miss
-# TODO: spell modifiers if possible (buffs, songs)
