attempting to parse csv

--- a/logstash/pipeline/filter_everquest_csv.conf
+++ b/logstash/pipeline/filter_everquest_csv.conf
@@ -3,7 +3,7 @@ filter {
 
     if [fields][document_type] == "everquest_csv_entry" {
         csv {
-            autodetect_column_names = true,
+            autodetect_column_names => true
         }
 
         date {
