--- a/logstash/pipeline/filter_everquest_csv.conf
+++ b/logstash/pipeline/filter_everquest_csv.conf
@@ -2,12 +2,13 @@
 filter {
 
     if [fields][document_type] == "everquest_csv_entry" {
+
         csv {
             autodetect_column_names => true
         }
 
         date {
-            match => ["datestamp","ISO8601"],
+            match => ["datestamp", "ISO8601"]
             remove_field => ["datestamp"]
         }
     }
