attempting to parse csv

--- a/logstash/pipeline/filter_everquest_csv.conf
+++ b/logstash/pipeline/filter_everquest_csv.conf
@@ -4,7 +4,8 @@ filter {
     if [fields][document_type] == "everquest_csv_entry" {
 
         csv {
-            autodetect_column_names => true
+            columns => ["datestamp", "Item", "Price", "Seller"]
+            skip_header => true
         }
 
         date {
