--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -12,7 +12,7 @@ filebeat.prospectors:
 
 - input_type: log
   paths:
-    - G:\games\eq_csv\resp_*.csv
+    - G:\eq_csv\resp_*.csv
   fields:
     document_type: 'everquest_csv_entry'
   close_eof: true
