attempting to parse csv

--- a/logstash/pipeline/filter_everquest_csv.conf
+++ b/logstash/pipeline/filter_everquest_csv.conf
@@ -4,6 +4,7 @@ filter {
     if [fields][document_type] == "everquest_csv_entry" {
 
         csv {
+            auto_generate_column_names => false
             columns => ["datestamp", "Item", "Price", "Seller"]
             skip_header => true
         }
