--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: elasticsearch/
     volumes:
       - type: volume
-        source: /docker/elk/data
+        source: elk_vol
         target: /usr/share/elasticsearch/data
         volume:
           nocopy: true
@@ -53,3 +53,7 @@ networks:
 
 volumes:
   elk_vol:
+    driver_opts:
+      type: none
+      device: /docker/elk/data
+      o: bind
